--- a/app/views/admins/news/show.html.erb
+++ b/app/views/admins/news/show.html.erb
@@ -1,11 +1,10 @@
 <div class="container mt-4">
-  <h2 class="mb-4">お知らせ詳細</h2>
   <%= render "admins/shared/flashes" %>
-
-  <div class="card">
+  <div class="card col-sm-9 mx-auto mt-5">
     <div class="card-body p-5">
+      <h3 class="text-center mb-4 fw-bold">お知らせ詳細</h3>
       <div class="d-flex justify-content-between">
-        <h5 class="card-title"><%= @news.title %></h5>
+        <h5><%= @news.calendar_date %></h5>
         <div class="text-right">
           <small class="text-muted">
             <%= "公開日時: " + format_datetime(@news.start_at) %><br>
@@ -13,13 +12,13 @@
           </small>
         </div>
       </div>
-
-      <div class="mt-3">
+      <h4 class="card-title"><%= @news.title %></h4>
+      <div class="mt-5">
         <p><%= @news.body %></p>
       </div>
+      <div class="custom-mt-3">
+        <%= link_to "一覧に戻る", @news_index_url, class: 'btn btn-secondary' %>
+      </div>
     </div>
-  </div>
-  <div class="mt-4">
-    <%= link_to "一覧に戻る", @news_index_url, class: 'btn btn-secondary' %>
   </div>
 </div>
