--- a/app/views/admins/shops/index.html.erb
+++ b/app/views/admins/shops/index.html.erb
@@ -1,6 +1,23 @@
 <div class="container mt-4">
   <div class="d-flex justify-content-between mb-4">
     <h3 class="fw-bold">店舗一覧</h3>
+    <%= search_form_for @q, url: admins_shops_path, class: 'form-inline' do |f| %>
+      <div class="d-flex">
+        <div class="input-group">
+          <%= f.search_field :name_cont, class: 'form-control', placeholder: '店舗名で検索' %>
+          <div class="input-group-append">
+            <%= f.submit '検索', class: 'btn btn-primary' %>
+          </div>
+        </div>
+        <div class="ms-2"></div>
+        <div class="input-group">
+          <%= f.search_field @search_scope, class: 'form-control', placeholder: '住所で検索' %>
+          <div class="input-group-append">
+            <%= f.submit '検索', class: 'btn btn-primary' %>
+          </div>
+        </div>
+      </div>
+    <% end %>
   </div>
   <%= render "admins/shared/flashes" %>
   <table class="table table-hover">
