--- a/app/views/admins/news/show.html.erb
+++ b/app/views/admins/news/show.html.erb
@@ -1,22 +1,20 @@
 <div class="container mt-4">
   <%= render "admins/shared/flashes" %>
   <div class="card col-sm-9 mx-auto mt-5">
-    <div class="card-body p-5">
-      <h3 class="text-center mb-5 fw-bold">お知らせ詳細</h3>
-      <div class="d-flex justify-content-between">
+    <div class="card-body p-3 p-sm-5"> <!-- パディング調整 -->
+      <h3 class="text-center mb-4 fw-bold">お知らせ詳細</h3>
+      <div class="text-center mb-4"> <!-- 中央寄せ -->
         <h5><%= @news.calendar_date %></h5>
-        <div class="text-right">
-          <small class="text-muted">
-            <%= "公開日時: " + format_datetime(@news.start_at) %><br>
-            <%= "公開終了日時: " + format_datetime(@news.end_at) %>
-          </small>
-        </div>
+        <small class="text-muted">
+          <%= "公開日時: " + format_datetime(@news.start_at) %><br>
+          <%= "公開終了日時: " + format_datetime(@news.end_at) %>
+        </small>
       </div>
       <h4 class="card-title"><%= @news.title %></h4>
-      <div class="mt-5">
+      <div class="mt-4">
         <p><%= @news.body %></p>
       </div>
-      <div class="mt-5">
+      <div class="mt-4">
         <%= link_to "一覧に戻る", @news_index_url, class: 'btn btn-secondary' %>
       </div>
     </div>
