--- a/app/views/admins/shops/show.html.erb
+++ b/app/views/admins/shops/show.html.erb
@@ -3,15 +3,15 @@
   <div class="card col-sm-9 mx-auto mt-5 d-flex">
     <div class="card-body p-5">
       <h2 class="mb-5 text-center fw-bold"><%= @shop.name %>の詳細情報</h2>
-      <div class="d-flex justify-content-between">
-        <div class="col-md-5">
+      <div class="d-flex justify-content-between flex-wrap">
+        <div class="col-md-5 mb-4">
           <% if @shop.shop_images? %>
             <%= image_tag @shop.shop_images.url, class: "img-fluid" %>
           <% else %>
             <%= image_tag '/assets/default_shop_image.png', alt: '店舗画像', class: "img-fluid" %>
           <% end %>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 mb-4">
           <p><strong>住所:</strong> <%= @shop.address %><%= @shop.prefecture.name %><%= @shop.city_name %></p>
           <p><strong>営業時間:</strong> <%= @shop.business_time %></p>
           <p><strong>アクセス:</strong> <%= @shop.access %></p>
