--- a/app/views/admins/news/show.html.erb
+++ b/app/views/admins/news/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container mt-4">
   <%= render "admins/shared/flashes" %>
   <div class="card col-sm-9 mx-auto mt-5">
-    <div class="card-body p-3 p-sm-5"> <!-- パディング調整 -->
+    <div class="card-body p-3 p-sm-5">
       <h3 class="text-center mb-4 fw-bold">お知らせ詳細</h3>
-      <div class="text-center mb-4"> <!-- 中央寄せ -->
+      <div class="text-center mb-4">
         <h5><%= @news.calendar_date %></h5>
         <small class="text-muted">
           <%= "公開日時: " + format_datetime(@news.start_at) %><br>
