--- a/app/views/admins/shops/index.html.erb
+++ b/app/views/admins/shops/index.html.erb
@@ -11,7 +11,7 @@
         </div>
         <div class="ms-2"></div>
         <div class="input-group">
-          <%= f.search_field @search_scope, class: 'form-control', placeholder: '住所で検索' %>
+          <%= f.search_field @search_residence_scope, class: 'form-control', placeholder: '住所で検索' %>
           <div class="input-group-append">
             <%= f.submit '検索', class: 'btn btn-primary' %>
           </div>
