--- a/app/views/admins/shops/_form.html.erb
+++ b/app/views/admins/shops/_form.html.erb
@@ -77,7 +77,7 @@
 
 <div class="mb-4">
   <%= f.label :shop_images, class: "form-label" %>
-  <span class="badge rounded-pill text-bg-success">必須</span>
+  <span class="badge rounded-pill text-bg-success">任意</span>
   <%= f.file_field :shop_images, class: 'form-control', accept: 'image/*' %>
   <%= f.hidden_field :shop_images_cache %>
 </div>
